# streamlit-dev

./: .gitignore  pyproject.toml  stock.py
.devcontainer/: devcontainer.json
enterprise_search/: app.py  main.py  pyproject.toml
git_apps/: .gitignore  app.py  main.py  pyproject.toml  questions.py
muscle/: .gitignore  app.py  data_loader.py  main.py  pyproject.toml  requirements.txt
shogi/: app.py  main.py  pyproject.toml  requirements.txt
shogi/data/: generate_problems.py  problems.json
shogi/pages/: 1_対局.py  2_次の一手.py  3_棋譜解析.py
shogi/shogi_engine/: __init__.py  ai_engine.py  board_renderer.py
stock/: README.md  pyproject.toml
text-to-speech_JasonStatham/: app.py  main.py  prepare_voice.py  pyproject.toml
text-to-speech_JasonStatham/sample_text/: Jason_Statham_quote.txt
text-to-speech_JasonStatham/voice_profile/: gpt_cond_latent.pt  speaker_embedding.pt
